--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ a {
 }
 
 .border-middle {
-  border-top: 0.1em solid #cccccc;
-  margin: 0 0 24px;
-  padding: 0 0 16px;
+  border-top: 1px solid hsla(210, 18%, 87%, 1);
+  margin-bottom: 16px;
+  padding-bottom: 16px;
 }
 .wrapper {
   max-width: 310px;
@@ -50,7 +50,7 @@ a {
   margin-top: 0;
 }
 .logo {
-  padding: 32px 0 24px;
+  padding: 32px 0 16px;
 }
 .wrapper .logo img {
   display: block;
@@ -63,7 +63,7 @@ a {
   margin-bottom: 15px;
   font-size: 16px;
   text-align: center;
-  color: #333;
+  color: #24292f;
   line-height: 1.5;
 }
 
@@ -92,7 +92,7 @@ a {
   background: #fff;
   border: 1px solid #d1d5da;
   box-shadow: inset 0 1px 2px rgba(27, 31, 35, 0.075);
-  border-radius: 3px;
+  border-radius: 6px;
   color: #24292e;
   font-size: 16px;
   line-height: 20px;
