--- a/style.css
+++ b/style.css
@@ -37,11 +37,6 @@ a {
   font-size: 1px;
 }
 
-.border-middle {
-  border-top: 1px solid hsla(210, 18%, 87%, 1);
-  margin-bottom: 16px;
-  padding-bottom: 16px;
-}
 .wrapper {
   max-width: 310px;
   width: 100%;
@@ -60,13 +55,18 @@ a {
 }
 
 .wrapper .title p {
-  margin-bottom: 15px;
+  padding-bottom: 16px;
+  margin-bottom: 24px;
+  border-bottom: 1px solid hsla(210, 18%, 87%, 1);
   font-size: 16px;
+  font-weight: 400;
   text-align: center;
   color: #24292f;
   line-height: 1.5;
 }
-
+strong {
+  font-weight: 600;
+}
 .wrapper .form {
   margin-bottom: 15px;
   background-color: #fff;
@@ -122,9 +122,11 @@ a {
   border: 1px solid rgba(27, 31, 35, 0.2);
   width: 100%;
   color: #fff;
-  font-weight: 600;
+  font-weight: 500;
   cursor: pointer;
-  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 20px;
+  padding: 5px 16px;
   border-radius: 6px;
 }
 
@@ -138,6 +140,7 @@ a {
   padding: 15px 20px;
   text-align: center;
   margin-bottom: 40px;
+  font-weight: 400;
 }
 
 .wrapper .create_act a:hover {
